[package]
name = "bevy_flowfield"
description = "Flowfield pathfinding using Bevy ECS"
version = "0.1.0"
authors = ["Julio Labarca"]
homepage = "https://github.com/Jlabarca/bevy-flowfield"
repository = "https://github.com/Jlabarca/bevy-flowfield"
license-file = "LICENSE"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8"
#bevy = { version = "0.8", default-features = false, features=["bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_pbr"] }
bevy_flycam = "*"

# [target.wasm32-unknown-unknown]
# runner = "wasm-server-runner"
