[package]
name = "bevy_flowfield"
description = "Flowfield pathfinding using Bevy ECS"
version = "0.1.0"
authors = ["Julio Labarca"]
homepage = "https://github.com/jlabarca/bevy-flowfield"
repository = "https://github.com/jlabarca/bevy-flowfield"
license-file = "LICENSE"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8"
bevy-inspector-egui = "0.12.0"
rand = "0.8.5"
bevy_flycam = "0.8.1"
noise = "0.7"
bevy_mod_raycast = "0.6.2"

